Shipment: añade tarimas_peco + admin y reporte por cliente

--- a/empaques/templates/empaques/shipment_form.html
+++ b/empaques/templates/empaques/shipment_form.html
@@ -103,6 +103,10 @@
     {{ form.invoice_number.label_tag }} {{ form.invoice_number }}
     {{ form.invoice_number.errors }}
   </div>
+  <div class="form-group col-md-3">
+  {{ form.tarimas_peco.label_tag }}
+  {{ form.tarimas_peco }}
+</div>
 </fieldset>
 
     <fieldset>
