Precio 15 decimales; departure_time opcional; orden DHG en form

--- a/empaques/templates/empaques/shipment_form.html
+++ b/empaques/templates/empaques/shipment_form.html
@@ -159,6 +159,9 @@
           {{ form.order_gh.label_tag }} {{ form.order_gh }}
           {{ form.order_gh.errors }}
         </div>
+        <div>
+          {{ form.order_dhg.label_tag }} {{ form.order_dhg }}
+          {{ form.order_dhg.errors }}
 
       </div>
       <!-- 🔼🔼🔼 FIN NUEVO -->
